// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportUpload reducer should handle REPORT_UPLOAD_PROCESS_FINISH 1`] = `
Object {
  "processID": 0,
  "status": "some-status",
}
`;

exports[`ReportUpload reducer should handle REPORT_UPLOAD_PROCESS_START 1`] = `
Object {
  "processID": 0,
  "status": "some-status",
}
`;

exports[`ReportUpload reducer should handle REPORT_UPLOAD_PROCESS_STOP 1`] = `
Object {
  "processID": 0,
  "status": "some-status",
}
`;

exports[`ReportUpload reducer should return the initial state 1`] = `
Object {
  "processID": 0,
  "status": "stopped",
}
`;
